--- a/perceptrones/perceptron multicapa alumno.ipynb
+++ b/perceptrones/perceptron multicapa alumno.ipynb
@@ -35,6 +35,26 @@
     "        \n",
     "    def forward (self, x): # propaga un vector x y devuelve la salida\n",
     "        # a implementar\n",
+    "        # Lo mismo que BGD pero con una sola instancia en lugar de todas.\n",
+    "        pesos = []\n",
+    "        x_ij = 0\n",
+    "        nuevos_pesos = []\n",
+    "        targets = dataset_targets.T.to_numpy()[0]\n",
+    "        for j in range(iteraciones):\n",
+    "            if j == 0: pesos = pesos_iniciales\n",
+    "            else: \n",
+    "                pesos = numpy.copy(nuevos_pesos)\n",
+    "                nuevos_pesos.clear()\n",
+    "            for i in range(len(pesos)):\n",
+    "                if i == 0:\n",
+    "                    x_ij = 1\n",
+    "                else:\n",
+    "                    x_ij = dataset_caracteristicas.iloc[instancias.iloc[j,0],i-1]\n",
+    "                sum_parameter = ((x_ij * pesos[i]) - targets[instancias.iloc[j,0]])*x_ij\n",
+    "                nuevo_peso = pesos[i] - 2*(f_aprendizaje)*sum_parameter\n",
+    "                nuevos_pesos.append(round(nuevo_peso,4))\n",
+    "        \n",
+    "        return nuevos_pesos\n",
     "        \n",
     "    def update (self, x, d, alpha): # realiza una iteración de entrenamiento\n",
     "        s = self.forward(x) # propaga\n",
