--- a/perceptrones/perceptron multicapa alumno.ipynb
+++ b/perceptrones/perceptron multicapa alumno.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,33 +34,17 @@
     "        self.b = np.random.rand(noutput)-0.5\n",
     "        \n",
     "    def forward (self, x): # propaga un vector x y devuelve la salida\n",
-    "        \n",
+    "        net = np.dot(x, self.w) + self.b # Directamente se puede hacer con el método dot. Primero x(inputs) que tiene de dimensión 1x2 y luego los pesos de dimensión 2x1. Al final se suma el bias.\n",
+    "        return np.where(net > 0, 1, 0)\n",
     "        \n",
     "    def update (self, x, d, alpha): # realiza una iteración de entrenamiento\n",
     "        s = self.forward(x) # propaga\n",
     "        \n",
     "        # calcula actualización de pesos para una entrada x\n",
     "        # a implementar\n",
-    "        # Lo mismo que BGD pero con una sola instancia en lugar de todas.\n",
-    "        pesos = []\n",
-    "        x_ij = 0\n",
-    "        nuevos_pesos = []\n",
-    "        targets = dataset_targets.T.to_numpy()[0]\n",
-    "        for j in range(iteraciones):\n",
-    "            if j == 0: pesos = pesos_iniciales\n",
-    "            else: \n",
-    "                pesos = numpy.copy(nuevos_pesos)\n",
-    "                nuevos_pesos.clear()\n",
-    "            for i in range(len(pesos)):\n",
-    "                if i == 0:\n",
-    "                    x_ij = 1\n",
-    "                else:\n",
-    "                    x_ij = dataset_caracteristicas.iloc[instancias.iloc[j,0],i-1]\n",
-    "                sum_parameter = ((x_ij * pesos[i]) - targets[instancias.iloc[j,0]])*x_ij\n",
-    "                nuevo_peso = pesos[i] - 2*(f_aprendizaje)*sum_parameter\n",
-    "                nuevos_pesos.append(round(nuevo_peso,4))\n",
-    "        \n",
-    "        return nuevos_pesos\n",
+    "        self.b += alpha * (d-s)\n",
+    "        self.w += alpha* np.transpose([x]) * (d-s) # Transpongo x porque es dimensión 1x2, mientras que w(eights) es 2x1\n",
+    "            \n",
     "        \n",
     "    def RMS (self, X, D): # calcula el error RMS\n",
     "        S = self.forward(X)\n",
@@ -86,9 +70,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "   Epoch: 10\n",
+      "     RMS: 0.25000\n",
+      "Accuracy: 0.75000\n",
+      "\n",
+      "   Epoch: 20\n",
+      "     RMS: 0.25000\n",
+      "Accuracy: 0.75000\n",
+      "\n",
+      "   Epoch: 30\n",
+      "     RMS: 0.25000\n",
+      "Accuracy: 0.75000\n",
+      "\n",
+      "   Epoch: 40\n",
+      "     RMS: 0.00000\n",
+      "Accuracy: 1.00000\n",
+      "\n",
+      "   Epoch: 50\n",
+      "     RMS: 0.00000\n",
+      "Accuracy: 1.00000\n"
+     ]
+    }
+   ],
    "source": [
     "# entrena para la OR\n",
     "\n",
@@ -98,10 +109,16 @@
     "data = np.array([[0.0, 0.0], [0.0, 1.0], [1.0, 0.0], [1.0, 1.0]])\n",
     "labels = np.array([[0.0], [1.0], [1.0], [1.0]])\n",
     "\n",
-    "p.info(data, labels)\n",
-    "p.train(data, labels, 0.01, 50, 10)\n",
-    "\n"
+    "p.info\n",
+    "p.train(data, labels, 0.01, 50, 10)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -353,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
