--- a/perceptrones/perceptron multicapa alumno.ipynb
+++ b/perceptrones/perceptron multicapa alumno.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +34,8 @@
     "        self.b = np.random.rand(noutput)-0.5\n",
     "        \n",
     "    def forward (self, x): # propaga un vector x y devuelve la salida\n",
-    "        net = np.dot(x, self.w) + self.b # Directamente se puede hacer con el método dot. Primero x(inputs) que tiene de dimensión 1x2 y luego los pesos de dimensión 2x1. Al final se suma el bias.\n",
-    "        return np.where(net > 0, 1, 0)\n",
+    "        sumaPonderada = np.dot(x, self.w) + self.b # Directamente se puede hacer con el método dot. Primero x(inputs) que tiene de dimensión 1x2 y luego los pesos de dimensión 2x1. Al final se suma el bias.\n",
+    "        return np.where(sumaPonderada > 0, 1, 0)\n",
     "        \n",
     "    def update (self, x, d, alpha): # realiza una iteración de entrenamiento\n",
     "        s = self.forward(x) # propaga\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -83,12 +83,12 @@
       "Accuracy: 0.75000\n",
       "\n",
       "   Epoch: 20\n",
-      "     RMS: 0.25000\n",
-      "Accuracy: 0.75000\n",
+      "     RMS: 0.50000\n",
+      "Accuracy: 0.50000\n",
       "\n",
       "   Epoch: 30\n",
-      "     RMS: 0.25000\n",
-      "Accuracy: 0.75000\n",
+      "     RMS: 0.50000\n",
+      "Accuracy: 0.50000\n",
       "\n",
       "   Epoch: 40\n",
       "     RMS: 0.00000\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,9 +145,29 @@
     "    \n",
     "    def forward (self, x): # propaga un vector x y devuelve la salida\n",
     "        # a implementar\n",
+    "        netSumHidden = np.dot(x, self.w1) + self.b1 # Directamente se puede hacer con el método dot. Primero x(inputs) que tiene de dimensión 1x2 y luego los pesos de dimensión 2x1. Al final se suma el bias.\n",
+    "        netSumHiddenSigm = self.sigm(netSumHidden)\n",
+    "        netSumOutput = np.dot(netSumHiddenSigm, self.w2) + self.b2\n",
+    "        return [self.sigm(netSumOutput)]\n",
     "    \n",
     "    def update (self, x, d, alpha): # realiza una iteración de entrenamiento\n",
     "        # a implementar\n",
+    "        \"\"\"error = self.RMS(x,d)\n",
+    "        print('error', error)\n",
+    "        print('self.w1', self.w1)\n",
+    "        self.w2 += alpha * self.w1 * (d-S)  # Transpongo x porque es dimensión 1x2, mientras que w(eights) es 2x1\n",
+    "        self.b2 += alpha * (error)\n",
+    "        r_k = np.dot(self.w2,error)\n",
+    "        hiddenError = np.dot(np.dot(r_k,self.w1), 1-self.w1)\n",
+    "        self.w1 += alpha* np.transpose([x]) * hiddenError # Transpongo x porque es dimensión 1x2, mientras que w(eights) es 2x1\n",
+    "        self.b1 += alpha * (hiddenError)\"\"\"\n",
+    "        \n",
+    "        errorRMS = self.RMS(x,d)\n",
+    "        errorHidden = self.w2 * errorRMS\n",
+    "        self.w2 += alpha * errorRMS * self.w2\n",
+    "        self.b2 += alpha * errorRMS\n",
+    "        self.w1 += alpha * errorHidden * np.transpose([x])\n",
+    "        self.b1 += alpha * np.transpose(errorHidden)[0]\n",
     "    \n",
     "    def RMS (self, X, D): # error RMS\n",
     "        S = self.forward(X)\n",
@@ -186,9 +206,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "not all arguments converted during string formatting",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[82], line 7\u001b[0m\n\u001b[0;32m      3\u001b[0m labels \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m0.0\u001b[39m], [\u001b[38;5;241m1.0\u001b[39m], [\u001b[38;5;241m1.0\u001b[39m], [\u001b[38;5;241m0.0\u001b[39m]])\n\u001b[0;32m      5\u001b[0m p \u001b[38;5;241m=\u001b[39m Multilayer(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m----> 7\u001b[0m \u001b[43mp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minfo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m p\u001b[38;5;241m.\u001b[39mtrain(data, labels, \u001b[38;5;241m0.8\u001b[39m, \u001b[38;5;241m5000\u001b[39m, \u001b[38;5;241m1000\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[81], line 57\u001b[0m, in \u001b[0;36mMultilayer.info\u001b[1;34m(self, X, D)\u001b[0m\n\u001b[0;32m     55\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlRMS\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mRMS(X,D))\n\u001b[0;32m     56\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlaccuracy\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maccuracy(X,D))\n\u001b[1;32m---> 57\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m     RMS: \u001b[39;49m\u001b[38;5;132;43;01m%6.5f\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m%\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlRMS\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[0;32m     58\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAccuracy: \u001b[39m\u001b[38;5;132;01m%6.5f\u001b[39;00m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlaccuracy[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n",
+      "\u001b[1;31mTypeError\u001b[0m: not all arguments converted during string formatting"
+     ]
+    }
+   ],
    "source": [
     "# xor\n",
     "data = np.array([[0.0, 0.0], [0.0, 1.0], [1.0, 0.0], [1.0, 1.0]])\n",
