--- a/perceptrones/perceptron multicapa alumno.ipynb
+++ b/perceptrones/perceptron multicapa alumno.ipynb
@@ -779,27 +779,14 @@
     "\n",
     "p = Multilayer(ni,10,no)\n",
     "\n",
-    "p.train(X, d, 0.01, 1000, 100)\n"
+    "p.train(X, d, 0.01, 1000, 200)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: '1.0'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m acc, loss \u001b[38;5;241m=\u001b[39m \u001b[43mp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtest2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43mL_test\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m----*\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m8\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTest Accuracy: \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mround\u001b[39m(acc, \u001b[38;5;241m5\u001b[39m))\n",
-      "Cell \u001b[1;32mIn[25], line 65\u001b[0m, in \u001b[0;36mMultilayer.test2\u001b[1;34m(self, X_test, L_test)\u001b[0m\n\u001b[0;32m     63\u001b[0m     outputAll\u001b[38;5;241m.\u001b[39mappend(np\u001b[38;5;241m.\u001b[39margmax(salida))\n\u001b[0;32m     64\u001b[0m     L_test[i] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(L_test[i])\n\u001b[1;32m---> 65\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mint\u001b[39m(np\u001b[38;5;241m.\u001b[39margmax(salida))\u001b[38;5;241m==\u001b[39m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mL_test\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m: \u001b[38;5;66;03m# acierto con la salida\u001b[39;00m\n\u001b[0;32m     66\u001b[0m         aux\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     67\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m aux\u001b[38;5;241m/\u001b[39m\u001b[38;5;28mlen\u001b[39m(L_test), \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtest_loss(np\u001b[38;5;241m.\u001b[39marray(outputAll), np\u001b[38;5;241m.\u001b[39marray(L_test))\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '1.0'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "acc, loss = p.test2(X_test,L_test)\n",
     "\n",
@@ -807,6 +794,16 @@
     "print(\"Test Accuracy: \", round(acc, 5))\n",
     "print(\"Test Error: \",loss)\n",
     "print(\"----*\"*8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  git config --global user.email \"you@example.com\"\n",
+    "#  git config --global user.name \"Your Name\""
    ]
   }
  ],
