Multilayered perceptron working. N layers with Xn neurons each.

--- a/perceptrones/perceptron multicapa alumno.ipynb
+++ b/perceptrones/perceptron multicapa alumno.ipynb
@@ -161,35 +161,6 @@
     "        self.w1 += alpha * np.outer(delta_hidden_input, x).T\n",
     "        self.b1 += alpha * delta_hidden_input\n",
     "\n",
-    "    def test(self, X_test, L_test):\n",
-    "        aux = 0\n",
-    "        outputAll = []\n",
-    "        for i in range(len(L_test)):\n",
-    "            salida = p.forward(X_test[i])\n",
-    "            outputAll.append(np.argmax(salida))\n",
-    "            #print(f\"argmax: {np.argmax(salida)},Ltest: {L_test[i]}, argmax_t: {type(np.argmax(salida))}, {type(L_test[i])}\")\n",
-    "            if int(np.argmax(salida))==int(L_test[i]): # acierto con la salida\n",
-    "                aux+=1\n",
-    "            #print(f'output: {salida}, output_index: {np.argmax(salida)}, expected: {L_test[i]}')\n",
-    "        return aux/len(L_test), self.test_loss(np.array(outputAll), np.array(L_test))\n",
-    "\n",
-    "    def test_loss(self,salida,expected):\n",
-    "        return np.sqrt(np.mean(np.square(abs(expected.astype(int)-salida))))\n",
-    "    \n",
-    "    def test2(self, X_test, L_test):\n",
-    "        aux = 0\n",
-    "        outputAll = []\n",
-    "        for i in range(len(L_test)):\n",
-    "            salida = p.forward(X_test[i])\n",
-    "            outputAll.append(np.argmax(salida))\n",
-    "            L_test[i] = float(L_test[i])\n",
-    "            if int(np.argmax(salida))==int(L_test[i]): # acierto con la salida\n",
-    "                aux+=1\n",
-    "        return aux/len(L_test), self.test_loss(np.array(outputAll), np.array(L_test))\n",
-    "\n",
-    "    def test_loss2(self,salida,expected):\n",
-    "        return np.sqrt(np.mean(np.square(abs(expected.astype(int)-salida))))\n",
-    "\n",
     "\n",
     "    def RMS (self, X, D): # error RMS\n",
     "        S = self.forward(X)\n",
@@ -798,13 +769,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  git config --global user.email \"you@example.com\"\n",
-    "#  git config --global user.name \"Your Name\""
+    "#Multilayer N \n",
+    "import numpy as np\n",
+    "# multicapa = Multilayer(nipunts, [10,20,30], nooutputs)\n",
+    "\n",
+    "class MultilayerN:\n",
+    "    def __init__(self, ninput, nhidden, noutput):\n",
+    "        self.ninput = ninput # número de entradas\n",
+    "        self.nhidden = nhidden # Lista con las neuronas de cada capa oculta\n",
+    "        self.noutput = noutput # número de salidas\n",
+    "        #\n",
+    "        #   inputs -> 10 n -> 20 -> 30 -> salida\n",
+    "        #\n",
+    "        #\n",
+    "\n",
+    "        w0 =  np.random.rand(ninput,nhidden[0])-0.5\n",
+    "        wLast = np.random.rand(nhidden[-1],noutput)-0.5\n",
+    "\n",
+    "\n",
+    "        self.weights = [np.random.rand(nhidden[x], nhidden[x+1])-0.5 for x in range(len(nhidden)-1)]\n",
+    "        self.weights.insert(0, w0)\n",
+    "        self.weights.append(wLast)\n",
+    "\n",
+    "        self.biases = [np.random.rand(nhidden[x])-0.5 for x in range(len(nhidden))]\n",
+    "        self.biases.append(np.random.rand(noutput)-0.5)\n",
+    "    \n",
+    "        self.lRMS = [] # contiene la lista de RMSs para pintarlos luego\n",
+    "        self.laccuracy = [] # contiene la lista de accuracy para pintar luego\n",
+    "\n",
+    "    def sigm (self, neta): # función sigmoidal\n",
+    "        return 1.0 / (1.0 + np.exp(-neta))\n",
+    "    \n",
+    "    def forward (self, x): # propaga un vector x y devuelve la salida\n",
+    "        # a implementar\n",
+    "\n",
+    "        \"\"\"\n",
+    "        netSumHidden = np.dot(x, self.w1) + self.b1\n",
+    "        self.netSumHiddenSigm = self.sigm(netSumHidden)\n",
+    "        netSumOutput = np.dot(self.netSumHiddenSigm, self.w2) + self.b2\n",
+    "        self.netSumOutputSigm = self.sigm(netSumOutput)\n",
+    "\n",
+    "        return self.netSumOutputSigm\n",
+    "        \"\"\"\n",
+    "            \n",
+    "        self.activaciones = []\n",
+    "        for i in range(len(self.nhidden)+1):\n",
+    "            netSumHidden = 0\n",
+    "            if i == 0:\n",
+    "                netSumHidden = np.dot(x, self.weights[0]) + self.biases[0]\n",
+    "                self.activaciones.append(self.sigm(netSumHidden))\n",
+    "                continue\n",
+    "            netSumHidden = np.dot(self.activaciones[i-1], self.weights[i]) + self.biases[i]\n",
+    "            self.activaciones.append(self.sigm(netSumHidden))\n",
+    "                \n",
+    "        return self.activaciones[-1]\n",
+    "\n",
+    "    \n",
+    "    def update (self, x, d, alpha): # realiza una iteración de entrenamiento\n",
+    "        # a implementar\n",
+    "        # NOTA: Los aleatorios influyen muchísimo en si se estanca en una meseta o no.\n",
+    "\n",
+    "        output = self.forward(x)\n",
+    "        deltas = []\n",
+    "\n",
+    "        # Cálculo de los deltas.\n",
+    "\n",
+    "#        delta_output_hidden = (d - output) * output * (1 - output)\n",
+    "#        delta_hidden_input = np.dot(self.w2, delta_output_hidden) * self.netSumHiddenSigm * (1 - self.netSumHiddenSigm)\n",
+    "\n",
+    "        for i in range(len(self.activaciones), 0, -1):\n",
+    "            if i == len(self.activaciones):\n",
+    "                delta = (d-output) * output * (1-output)\n",
+    "            else:\n",
+    "                delta = np.dot(self.weights[i], deltas[-1]) * self.activaciones[i-1] * (1 - self.activaciones[i-1])\n",
+    "            deltas.append(delta)\n",
+    "\n",
+    "#        Actualización de pesos y bias\n",
+    "            \n",
+    "#        self.weights += alpha * np.outer(deltas, self.activaciones).T\n",
+    "#        self.biases += alpha * deltas\n",
+    "#        \n",
+    "#        self.w2 += alpha * np.outer(delta_output_hidden, self.netSumHiddenSigm).T\n",
+    "#        self.b2 += alpha * delta_output_hidden\n",
+    "#        \n",
+    "#        self.w1 += alpha * np.outer(delta_hidden_input, x).T\n",
+    "#        self.b1 += alpha * delta_hidden_input\n",
+    "\n",
+    "        deltas = list(reversed(deltas))\n",
+    "\n",
+    "        for i in range(len(self.activaciones)):\n",
+    "            if i == 0:\n",
+    "                self.weights[i] += alpha * np.outer(deltas[i], x).T\n",
+    "            else:\n",
+    "                self.weights[i] += alpha * np.outer(deltas[i], self.activaciones[i-1]).T\n",
+    "            self.biases[i] += alpha * deltas[i]\n",
+    "\n",
+    "    def RMS (self, X, D): # error RMS\n",
+    "        S = self.forward(X)\n",
+    "        return np.mean(np.sqrt(np.mean(np.square(S-D),axis=1)))\n",
+    "        \n",
+    "    def accuracy (self, X, D): # calcula ratio de4 aciertos\n",
+    "        S = self.forward(X)\n",
+    "        S = np.round(S)\n",
+    "        errors = np.mean(np.abs(D-S))\n",
+    "        return 1.0 - errors\n",
+    "    \n",
+    "    def info (self, X, D): # escribe traza\n",
+    "        self.lRMS.append(self.RMS(X,D))\n",
+    "        self.laccuracy.append(self.accuracy(X,D))\n",
+    "        print('     RMS: %6.5f' % self.lRMS[-1])\n",
+    "        print('Accuracy: %6.5f' % self.laccuracy[-1])\n",
+    "        \n",
+    "    def train (self, X, D, alpha, epochs, trace=0): # entrena usando update\n",
+    "        self.lRMS = [] # guarda lista de RMSs para pintarlos\n",
+    "        self.laccuracy = [] # guarda lista de accuracy\n",
+    "\n",
+    "        for e in range(1,epochs+1):\n",
+    "            for i in range(len(X)):\n",
+    "                self.update(X[i],D[i], alpha)\n",
+    "            if trace!=0 and e%trace == 0:\n",
+    "                print('\\n   Epoch: %d' % e)\n",
+    "                self.info(X,D)\n",
+    "                \n",
+    "def one_hot (d): # codificación one_hot\n",
+    "    num_classes = len(set(d))\n",
+    "    rows = d.shape[0]\n",
+    "    labels = np.zeros((rows, num_classes), dtype='float32')\n",
+    "    labels[np.arange(rows),d.T] = 1\n",
+    "    return labels"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "   Epoch: 100\n",
+      "     RMS: 0.33931\n",
+      "Accuracy: 0.79333\n",
+      "\n",
+      "   Epoch: 200\n",
+      "     RMS: 0.26849\n",
+      "Accuracy: 0.85111\n",
+      "\n",
+      "   Epoch: 300\n",
+      "     RMS: 0.16140\n",
+      "Accuracy: 0.95556\n",
+      "\n",
+      "   Epoch: 400\n",
+      "     RMS: 0.10044\n",
+      "Accuracy: 0.96889\n",
+      "\n",
+      "   Epoch: 500\n",
+      "     RMS: 0.07665\n",
+      "Accuracy: 0.97333\n",
+      "\n",
+      "   Epoch: 600\n",
+      "     RMS: 0.06469\n",
+      "Accuracy: 0.97333\n",
+      "\n",
+      "   Epoch: 700\n",
+      "     RMS: 0.05762\n",
+      "Accuracy: 0.97333\n",
+      "\n",
+      "   Epoch: 800\n",
+      "     RMS: 0.05306\n",
+      "Accuracy: 0.97333\n",
+      "\n",
+      "   Epoch: 900\n",
+      "     RMS: 0.04998\n",
+      "Accuracy: 0.97556\n",
+      "\n",
+      "   Epoch: 1000\n",
+      "     RMS: 0.04779\n",
+      "Accuracy: 0.97778\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Orquideas\n",
+    "\n",
+    "X = np.loadtxt('samples/iris.csv', dtype = 'float64', usecols = [0,1,2,3])\n",
+    "L = np.loadtxt('samples/iris.csv', dtype = str, usecols = [4]) \n",
+    "\n",
+    "# convierte la salida a enteros\n",
+    "d = []\n",
+    "options = ['Iris-setosa', 'Iris-versicolor', 'Iris-virginica']\n",
+    "for e in L:\n",
+    "    d.append(options.index(e))\n",
+    "\n",
+    "d = np.array(d)\n",
+    "X = np.array(X)\n",
+    "\n",
+    "d = one_hot(d)\n",
+    "\n",
+    "ni = X.shape[1]\n",
+    "no = len(options)\n",
+    "\n",
+    "p = MultilayerN(ni,[16,64,32], no)\n",
+    "\n",
+    "# encontrar arquitectura mínima que aprende este problema\n",
+    "\n",
+    "p.train(X, d, 0.01, 1000, 100)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -823,7 +1013,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
