--- a/perceptrones/perceptron multicapa alumno.ipynb
+++ b/perceptrones/perceptron multicapa alumno.ipynb
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -914,44 +914,44 @@
      "text": [
       "\n",
       "   Epoch: 100\n",
-      "     RMS: 0.33931\n",
-      "Accuracy: 0.79333\n",
+      "     RMS: 0.47067\n",
+      "Accuracy: 0.66667\n",
       "\n",
       "   Epoch: 200\n",
-      "     RMS: 0.26849\n",
-      "Accuracy: 0.85111\n",
+      "     RMS: 0.46265\n",
+      "Accuracy: 0.66667\n",
       "\n",
       "   Epoch: 300\n",
-      "     RMS: 0.16140\n",
-      "Accuracy: 0.95556\n",
+      "     RMS: 0.34756\n",
+      "Accuracy: 0.84222\n",
       "\n",
       "   Epoch: 400\n",
-      "     RMS: 0.10044\n",
-      "Accuracy: 0.96889\n",
+      "     RMS: 0.30605\n",
+      "Accuracy: 0.84667\n",
       "\n",
       "   Epoch: 500\n",
-      "     RMS: 0.07665\n",
-      "Accuracy: 0.97333\n",
+      "     RMS: 0.29676\n",
+      "Accuracy: 0.84222\n",
       "\n",
       "   Epoch: 600\n",
-      "     RMS: 0.06469\n",
-      "Accuracy: 0.97333\n",
+      "     RMS: 0.25605\n",
+      "Accuracy: 0.90667\n",
       "\n",
       "   Epoch: 700\n",
-      "     RMS: 0.05762\n",
-      "Accuracy: 0.97333\n",
+      "     RMS: 0.18800\n",
+      "Accuracy: 0.95556\n",
       "\n",
       "   Epoch: 800\n",
-      "     RMS: 0.05306\n",
-      "Accuracy: 0.97333\n",
+      "     RMS: 0.14099\n",
+      "Accuracy: 0.96889\n",
       "\n",
       "   Epoch: 900\n",
-      "     RMS: 0.04998\n",
-      "Accuracy: 0.97556\n",
+      "     RMS: 0.11443\n",
+      "Accuracy: 0.97111\n",
       "\n",
       "   Epoch: 1000\n",
-      "     RMS: 0.04779\n",
-      "Accuracy: 0.97778\n"
+      "     RMS: 0.09839\n",
+      "Accuracy: 0.97333\n"
      ]
     }
    ],
@@ -975,7 +975,7 @@
     "ni = X.shape[1]\n",
     "no = len(options)\n",
     "\n",
-    "p = MultilayerN(ni,[16,64,32], no)\n",
+    "p = MultilayerN(ni,[2, 30, 4], no)\n",
     "\n",
     "# encontrar arquitectura mínima que aprende este problema\n",
     "\n",
