Puesto aviso de instalación networkx

--- a/perceptrones/práctica_perceptron_CYBERRY.ipynb
+++ b/perceptrones/práctica_perceptron_CYBERRY.ipynb
@@ -22,6 +22,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **-------------------------¡¡¡AVISO!!!-------------------------**\n",
+    "\n",
+    "### Para ejecutar las celdas de visualización de la red neuronal deberá instalar la librería 'networkx' (*pip/pip3 install networkx*)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# ---> **CLASE PERCEPTRÓN** <---"
    ]
   },
