gitignore + corrección en un path

--- a/Práctica2_Captcha/2.CYBERRYs_model.ipynb
+++ b/Práctica2_Captcha/2.CYBERRYs_model.ipynb
@@ -376,7 +376,7 @@
    ],
    "source": [
     "# Una imagen pasada a mano\n",
-    "imagen = Image.open('validation/11366.png')\n",
+    "imagen = Image.open('archivosDataset/validation/11366.png')\n",
     "imagen = np.array(imagen)\n",
     "cachos_prueba = trocear_el_sushiV3(imagen=imagen, num_trozos=NUM_TROZOS)\n",
     "\n",
